--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,19 @@
 recursive-include src *.md *.rst *.bash
+include *.txt
+include .coveragerc
+include Makefile
+recursive-include docs *.bat
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
+recursive-include tests *.bak
+recursive-include tests *.bash
+recursive-include tests *.c
+recursive-include tests *.cor
+recursive-include tests *.in
+recursive-include tests *.log
+recursive-include tests *.out
+recursive-include tests *.pdb
+recursive-include tests *.py
+recursive-include tests *.sge
+recursive-include tests *.xyz
