--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include src *.md *.rst *.bash
+recursive-include src *.md *.rst *.bash LICENSE
 include *.txt
 include .coveragerc
 include Makefile
