--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,13 +2,9 @@
 -e .
 
 # Tests
-atomicwrites==1.2.1
-attrs==18.2.0
-more-itertools==4.3.0
-pluggy==0.7.1
-py==1.6.0
 pytest>=3.8
-six==1.11.0
+pytest-cov==2.6.0
 
 # Code checkers
-
+flake8
+pylint
