--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 # Other env: pypy, jython
 
 [tox]
-envlist = py35, py36
+envlist = py36
 
 [testenv]
 deps =
@@ -13,4 +13,4 @@ deps =
     numpy
     tqdm
 commands =
-    pytest tests -v
+    pytest tests
